Fixed Coverity scan

--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -8,8 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: dependencies
-      run: sudo apt install autoconf automake bison build-essential \
-            libevent-dev libssl-dev libtool pkgconf libpam0g-dev zlib1g-dev
+      run: sudo apt-get install autoconf automake bison build-essential libevent-dev libssl-dev libtool pkgconf libpam0g-dev zlib1g-dev
     - name: scan
       run: sh ci/scripts/coverity_scan.sh
       env:
